# unlimited-search

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PLATFORMS.md  PRIVACY.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
docs/: mcp-config.md
scripts/: eval_urls.yaml  install.ps1  install.sh  run_eval.py
src/unlimited_search/: __init__.py  app.py  cli.py  server.py
src/unlimited_search/engine/: __init__.py  archive_fallbacks.py  content_fallbacks.py  media.py  models.py  public_routes.py  reader.py  safety.py  transforms.py  transport.py  validators.py
tests/: test_app.py  test_archive_fallbacks.py  test_content_fallbacks.py  test_eval_runner.py  test_media.py  test_public_routes.py  test_reader.py  test_server.py  test_transport.py  test_validators.py
