[project]
name = "unlimited-search"
version = "0.1.0"
description = "MCP server for reading public web pages through resilient public routes."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "curl-cffi>=0.7.4",
    "mcp>=1.13.0",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[project.scripts]
unlimited-search = "unlimited_search.app:main"
unlimited-search-mcp = "unlimited_search.server:main"
unlimited-search-read = "unlimited_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
