[project]
name = "unlimited-search"
version = "1.0.0"
description = "MCP server for reading public web pages through resilient public routes."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "unlimited-search maintainers" },
]
keywords = ["mcp", "search", "web", "reader", "public-content"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "curl-cffi>=0.7.4",
    "mcp>=1.13.0",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
]

[project.scripts]
unlimited-search = "unlimited_search.app:main"
unlimited-search-mcp = "unlimited_search.server:main"
unlimited-search-read = "unlimited_search.cli:main"

[project.urls]
Homepage = "https://github.com/flyingsquirrel0419/unlimited-search"
Repository = "https://github.com/flyingsquirrel0419/unlimited-search"
Issues = "https://github.com/flyingsquirrel0419/unlimited-search/issues"
Changelog = "https://github.com/flyingsquirrel0419/unlimited-search/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
